<resources>
    <string name="app_name">SellQuick</string>

    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item name</string>
    <string name="item_price">Rs. 200</string>
    <string name="add">add +</string>
    <string name="item_image">item image</string>
    <string name="remove">Remove</string>
    <string name="place_order">place order</string>
    <string name="total_orders">Total Orders</string>
    <string name="order_count">250</string>
    <string name="rank">1</string>
    <string name="best_selling_rank">Best Selling Rank</string>
    <string name="close">Close</string>
    <string name="orders_count">Orders Count</string>
    <string-array name="duration">
        <item>1 hour</item>
        <item>24 hours</item>
        <item>1 week</item>
    </string-array>

</resources>