<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <ImageView
        android:id="@+id/cart_item_imageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/basket_full_vegetables"
        android:layout_centerVertical="true"
        android:contentDescription="@string/item_image" />

    <TextView
        android:id="@+id/cart_item_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/cart_item_imageview"
        android:text="@string/item_name"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/cart_item_price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/cart_item_imageview"
        android:layout_below="@id/cart_item_name_textview"
        android:text="@string/item_price"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/cart_item_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_toEndOf="@id/cart_item_imageview"
        android:layout_below="@id/cart_item_price_textview"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />



</RelativeLayout>