<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_orders"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_orders_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/textview1"
        android:text="@string/order_count"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview4"
        android:layout_marginTop="16dp"
        android:text="@string/best_selling_rank"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/rank_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview4"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/textview2"
        android:text="@string/rank"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview1"
        android:layout_marginTop="16dp"
        android:text="In Last"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/duration_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview1"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@id/textview3"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginStart="74dp"
        android:hint="24 Hours"
        android:padding="10dp"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_red_dark"
        android:textSize="14.5sp"
        android:textStyle="bold"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_padding="8dp"
        app:spinner_arrow_tint="@color/blue"
        app:spinner_divider_color="@android:color/darker_gray"
        app:spinner_divider_show="true"
        app:spinner_divider_size="0.4dp"
        app:spinner_item_array="@array/duration"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@color/white"
        app:spinner_popup_elevation="14dp"
        android:layout_marginBottom="60dp"/>

    <TextView
        android:id="@+id/textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview3"
        android:layout_marginTop="16dp"
        android:text="@string/orders_count"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/orders_count_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview3"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/textview2"
        android:text="@string/rank"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>